ui/foundation/components/header/menu.scss
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

.fdn-header-menu {
	position: absolute;
	top: 4.5rem;
	--visible: 0;
	--pointer-events: none;
}

.fdn-header-menu-item-content {
	display: flex;
	flex-direction: column;
	gap: 0.5rem;
	flex: 1;
}

